syntax = "proto3";

package greet;

option java_package = "com.saikat.greet";

option java_multiple_files = true;

message Greeting{
    string firtName =1;
    string lastName =2;
}

message GreetRequest{
    Greeting greeting=1;
}

message GreetResponse{
    string result=1;
}

message GreetManyTimesRequest{
    Greeting greeting=1;
}

message GreetManyTimesResponse {
    string result=1;
}

message LongGreetRequest{
    Greeting greeting=1;
}

message LongGreetResponse{
    string result=1;
}

message GreetEveryoneRequest{
    Greeting greeting=1;
}

message GreetEveryoneResponse{
    string result=1;
}

service GreetService{
    //Unary gRPC API
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    //Server Streaming gRPC API
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client Streaming gRPC API
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    //Bi-directional Streaming gRPC API
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}







